[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/resources/font1.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/buttons/button-locked.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/button-hover.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/button-click.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/button-normal.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/worlds/LoginScreen.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="LoginScreen" type="Node2D" groups=[
"login_world",
]]
script = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 2560.0
margin_bottom = 1440.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 852.0
margin_top = 311.0
margin_right = 1708.0
margin_bottom = 1129.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 856.0
margin_bottom = 818.0
custom_constants/separation = 48

[node name="Title" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 856.0
margin_bottom = 64.0
text = "Авторизация"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 856.0
margin_bottom = 112.0

[node name="UsernameTitle" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 856.0
margin_bottom = 224.0
rect_min_size = Vector2( 1, 1 )
text = "Логин"

[node name="Username" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 856.0
margin_bottom = 346.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordTitle" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 394.0
margin_right = 856.0
margin_bottom = 458.0
text = "Пароль"

[node name="Password" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 506.0
margin_right = 856.0
margin_bottom = 580.0
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 628.0
margin_right = 856.0
margin_bottom = 818.0

[node name="LoginButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer" groups=[
"login_button",
]]
margin_right = 426.0
margin_bottom = 190.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer/LoginButton"]
margin_right = 424.0
margin_bottom = 181.0
text = "Логин"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 430.0
margin_right = 856.0
margin_bottom = 190.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer/RegisterButton"]
margin_right = 430.0
margin_bottom = 181.0
text = "Регистрация"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
